# loseface

./: CMakeLists.txt  INSTALL.txt  LICENSE.txt  ORL_TESTS.txt  README.md  README.txt  build_package.sh  start_cmd.bat
cmake/: FindVaca.cmake
dbs/: cidisinc.sql  schema.sql
docs/: CMakeLists.txt  Makefile
docs/manual/: Makefile  manual.css  manual.rst
scripts/: README.txt  batch_job.bat  batch_job.sh  calculate_from_variance.lua  cidisinc_get_faces.lua  cidisinc_images_matrix.lua  cidisinc_patterns.lua  cidisinc_patterns_variance.lua  cidisinc_render_big_picture.lua  cidisinc_render_images_matrix.lua  create_patterns.lua  divide_images_matrix.lua  mlp_array.lua  mlp_global.lua  orl_images_matrix.lua  orl_patterns.lua  orl_patterns_variance.lua
scripts/orl_faces/: download.txt  download_faces.bat
src/: ActivationFunctions.h  Ann.h  AnnDynamic.h  Backpropagation.cpp  Backpropagation.h  Chrono.h  Eigenfaces.cpp  Eigenfaces.h  LuaState.h  Matrix.cpp  Matrix.h  Mlp.cpp  Mlp.h  MlpArray.cpp  MlpArray.h  Pattern.cpp  Pattern.h  PatternSet.cpp  PatternSet.h  Random.h  SharedPtr.h  Vector.cpp  Vector.h  approx_eq.h  loseface.cpp  lua_annlib.cpp  lua_annlib.h  util.h
src-gui/: CMakeLists.txt  CmdIds.h  CreateUserPanel.cpp  CreateUserPanel.h  DB.h  DBUser.h  FlowLayout.cpp  FlowLayout.h  IdentifyDialog.cpp  IdentifyDialog.h  LoginDialog.cpp  LoginDialog.h  LoseFaceApp.cpp  LoseFaceApp.h  MainFrame.cpp  MainFrame.h  MainWindow.cpp  MainWindow.h  Navigation.cpp  Navigation.h  Navigator.cpp  Navigator.h  NewFuncs.h  PreferencesPanel.cpp  PreferencesPanel.h  Recognizer.cpp  Recognizer.h  SearchPanel.cpp  SearchPanel.h  UserNavigation.cpp  UserNavigation.h  UserNavigationButton.cpp  UserNavigationButton.h  WebCamWidget.cpp  WebCamWidget.h  main.cpp
src-gui/Vaca/: ImagePng.h
src-gui/dao/: General.cpp  General.h  Iterator.h  Photo.cpp  Photo.h  Picture.cpp  Picture.h  User.cpp  User.h
src-gui/dto/: Photo.h  Picture.h  User.h
src/captu/: VideoCapture.h
src/captu/linux/: VideoCaptureLinux.cpp  spca5xx.h  spcadecoder.c  spcadecoder.h  spcagamma.h  spcav4l.c  spcav4l.h
src/captu/win32/: VideoCaptureWin32.cpp
src/image/: faceloc.h  imageproc.h
src/lua/: Eigenfaces.cpp  Image.cpp  LuaState.h  Mlp.cpp  MlpArray.cpp  Normalizer.cpp  PatternSet.cpp  annlib.cpp  annlib.h  imglib.cpp  imglib.h  lua_annlib.cpp  lua_annlib.h
src/recog/: Eigenfaces.cpp  Eigenfaces.h  FrEigenfacesMlp.cpp  FrEigenfacesMlp.h  FrSystem.h  Image.h  Subject.h  SubjectsFilter.h  SubjectsList.h  SubjectsReader.h  recog_util.cpp  recog_util.h
tests/: CMakeLists.txt  test_dist.cpp  test_mat.cpp  test_mean.cpp  test_mlp.cpp  test_perf.cpp
